src/test/deca/context/valid/test_pass_1_numerous_objects_created.deca
// Description:
//    Program testing pass 1, creat numerous objects
//
// Results:
//    ok
//
// History:
//    Created on 14/01/2025

class Test1 {
    
}

class Test2{
    
}
