src/test/deca/context/invalid/test_pass_1_object_with_non_class_superclass.deca
// Description:
//    Program testing pass 1, create object with a non-object superclass like int 
//
// Results:
//    ok
//
// History:
//    Created on 14/01/2025

class Test1 extends int{
    
}

